	-- Added config parameter 'forceUseNamedDriverClass', which ensures that an instance of the class named in
	   'driverClass' is used as the JDBC driver, rather than simply preloading the named class and then 
	   relying upon DriverManager to determine which driver to use. Thanks to Martin Coene and meinc on SourceForge
	   for calling attention to this issue.
	-- We now support the parentLogger property of DataSources (rather than just throwing an SQLFeatureNotSupportedException).
	   This should resolve the issue identified by Maarten Coene (thanks!), where JMX clients repeatedly see
	   Exceptions as they try to read the parentLogger property.
	-- [in mchange commons java] MLog levels WARNING and SEVERE were misordered due to bad copy/paste of 
	   the integer value of levels. Many thanks to Martin Coene for discovering and tracking down the problem.
	-- [in mchange commons java] An error in MLog logging to log4j caused an IllegalArgumentException
	   at log level OFF. This problem was identified and fixed by Sebastian Baumhekel
	-- [in mchange commons java] Defines a jdk14logging ForwardingLogger that adapts MLog Loggers into
	   JDK14 (java.util.logging) Loggers
	-- Unused resources cleaned up on BasicResourcePool close() are properly added to the formerResources
	   WeakHashMap, to prevent multiple checkins of those resources from triggering foreign resource warnings.
	   Thanks again to Brett Wooldridge for calling attention to this issue.
	-- Guarded marking of transactions as maybe dirty in Statement proxies, so that they don't trigger NPEs 
	   then Exceptions for illegal operation on a closed Connection for methods like Connection.isClosed.
	   Many thanks to Brett Wooldridge for calling attention to this issue.
	-- Prevent JMX clients from updating properties on underlying pools (and therefore potentially
	   triggering a wind-down / reconstruction of internal pools) if the new value of the property